--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <header>
-        <div>
-       <img src="https://raw.githubusercontent.com/silviosnjr/BibliotecaStartReferencia/main/img/Logo.svg" alt="logo">
-       <h1>
-        
-       </h1>    
+    <header class="cabecalho">
+        <div class="container">
+       <img class="container__imagem" src="https://raw.githubusercontent.com/silviosnjr/BibliotecaStartReferencia/main/img/Logo.svg" alt="logo">
+       <h1 class="container__titulo">
+        Biblioteca<b class="container__titulo__negrito">Start</b>
+       </h1>
+       <p class="container__frase">
+        "aqui cada livro e um<i>Start</i>para um monoconhecimento"
+        </p>
         </div>
     </header>
 </body>
